--- a/Using DBN and Single CSV data/requirements.txt
+++ b/Using DBN and Single CSV data/requirements.txt
@@ -1,9 +1,9 @@
-numpy==1.16.4
-scipy==0.18.1
-scikit-learn==0.18.1
+numpy
+scipy
+scikit-learn
 tensorflow==1.5.0
-pandas==1.1.5
-matplotlib==3.3.4
-seaborn==0.9.1
+pandas
+matplotlib
+seaborn
 openpyxl==3.0.7
 ipykernel
